test/typecheck/errors/bad-views8.boa
view sv6 {
	o: output sum[string][string] of int;
	s := 2;

	o["a"]["b"] << 0;
}

v := sv6/o;

c := v._4;
